--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<h1>Hi, I'm Ian.</h1>
+	<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
+	<p>inewman@ufl.edu</p>
 </body>
 </html>
