--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<h1>Hi, I'm Ian.</h1>
 	<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
 	<p>inewman@ufl.edu</p>
+	<h6>This page is a placeholder. Expect a real site soon.</h6>
 </body>
 </html>
