--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		Computer Engineering // Ian Newman
+		Ian Newman | Computer Engineering
 	</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -11,7 +11,25 @@
 <body>
 	<h1>Hi, I'm Ian.</h1>
 	<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
-	<p>inewman@ufl.edu</p>
-	<h6>This page is a placeholder. Expect a real site soon.</h6>
+	<p>You can contact me via email at <a href="mailto:inewman@ufl.edu">inewman@ufl.edu</a></p>
+	<p>Education:</p>
+	<ul>
+		<li>Celebration High Schoool</li>
+		<li>Windermere Preparatory School</li>
+		<li>University of Florida (current)</li>
+	</ul>
+	<p>Coding experience:</p>
+	<ul>
+		<li>C (confident with C99 and C11 standards)</li>
+		<li>C++ (confident with C++98, C++11, and C++14 standards)</li>
+		<li>C#</li>
+		<li>Java</li>
+		<li>Python (also Django and Flask)</li>
+		<li>Ruby (also Rails)</li>
+		<li>Visual Basic .NET</li>
+		<li>Basic front-end web development (HTML, CSS, Javascript)</li>
+	</ul>
+	<p>Currently I am learning <i>Digital Logic</i> and <i>Data Structures and Algorithms</i>. On my own time, I am practicing full stack development and learning Mozilla's <a href="https://www.rust-lang.org/">Rust</a> language.</p>
+	<h6>This page is a placeholder. Expect a real site soon. <a href="http://github.com/inewman">GitHub</a></h6>
 </body>
 </html>
