--- a/index.html
+++ b/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>
-		Ian Newman | Computer Engineering
-	</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<h1>Hi, I'm Ian.</h1>
-	<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
-	<p>You can contact me via email at <a href="mailto:inewman@ufl.edu">inewman@ufl.edu</a></p>
-	<p>Education:</p>
-	<ul>
-		<li>Celebration High Schoool</li>
-		<li>Windermere Preparatory School</li>
-		<li>University of Florida (current)</li>
-	</ul>
-	<p>Coding experience:</p>
-	<ul>
-		<li>C (confident with C99 and C11 standards)</li>
-		<li>C++ (confident with C++98, C++11, and C++14 standards)</li>
-		<li>C#</li>
-		<li>Java</li>
-		<li>Python (also Django and Flask)</li>
-		<li>Ruby (also Rails)</li>
-		<li>Visual Basic .NET</li>
-		<li>Basic front-end web development (HTML, CSS, Javascript)</li>
-	</ul>
-	<p>Currently I am learning <i>Digital Logic</i> and <i>Data Structures and Algorithms</i>. On my own time, I am practicing full stack development and learning Mozilla's <a href="https://www.rust-lang.org/">Rust</a> language.</p>
-	<h6>This page is a placeholder. Expect a real site soon. <a href="http://github.com/inewman">GitHub</a></h6>
-</body>
+	<head>
+		<title>
+			Ian Newman | Computer Engineering
+		</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="style/style.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+	</head>
+	<body>
+		<h1>Hi, I'm Ian.</h1>
+		<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
+		<p>You can contact me via email at <a href="mailto:inewman@ufl.edu">inewman@ufl.edu</a></p>
+		<p>Education:</p>
+		<ul>
+			<li>Celebration High Schoool</li>
+			<li>Windermere Preparatory School</li>
+			<li>University of Florida (current)</li>
+		</ul>
+		<p>Coding experience:</p>
+		<ul>
+			<li>C (confident with C99 and C11 standards)</li>
+			<li>C++ (confident with C++98, C++11, and C++14 standards)</li>
+			<li>C#</li>
+			<li>Java</li>
+			<li>Python (also Django and Flask)</li>
+			<li>Ruby (also Rails)</li>
+			<li>Visual Basic .NET</li>
+			<li>Basic front-end web development (HTML, CSS, Javascript)</li>
+		</ul>
+		<p>Currently I am learning <i>Digital Logic</i> and <i>Data Structures and Algorithms</i>. On my own time, I am practicing full stack development and learning Mozilla's <a href="https://www.rust-lang.org/">Rust</a> language.</p>
+		<h6>This page is a placeholder. Expect a real site soon. <a href="http://github.com/inewman">GitHub</a></h6>
+		<svg class="logo" width="250" height="250">
+			<path d="M240,10v230H10V10H240 M250,0H0v250h250V0L250,0z"/>
+			<polygon points="49.2,33.6 45.5,33.6 45.5,216.4 80.5,216.4 80.5,107.6 80.5,107.6 80.5,62.3"/>
+			<polygon points="169.5,33.6 169.5,144.1 94.4,75.1 94.4,120.2 200.8,216.4 204.5,216.4 204.5,33.6"/>
+		</svg>
+	</body>
 </html>
