Assign class to logo shapes
Assigned class "logo parts" to logo shapes in CSS. Changed color to
#33b5e5 for now.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		<p>Currently I am learning <i>Digital Logic</i> and <i>Data Structures and Algorithms</i>. On my own time, I am practicing full stack development and learning Mozilla's <a href="https://www.rust-lang.org/">Rust</a> language.</p>
 		<h6>This page is a placeholder. Expect a real site soon. <a href="http://github.com/inewman">GitHub</a></h6>
 		<svg class="logo" width="250" height="250">
-			<path d="M240,10v230H10V10H240 M250,0H0v250h250V0L250,0z"/>
-			<polygon points="49.2,33.6 45.5,33.6 45.5,216.4 80.5,216.4 80.5,107.6 80.5,107.6 80.5,62.3"/>
-			<polygon points="169.5,33.6 169.5,144.1 94.4,75.1 94.4,120.2 200.8,216.4 204.5,216.4 204.5,33.6"/>
+			<path class="logo-parts" d="M240,10v230H10V10H240 M250,0H0v250h250V0L250,0z"/>
+			<polygon class="logo-parts" points="49.2,33.6 45.5,33.6 45.5,216.4 80.5,216.4 80.5,107.6 80.5,107.6 80.5,62.3"/>
+			<polygon class="logo-parts" points="169.5,33.6 169.5,144.1 94.4,75.1 94.4,120.2 200.8,216.4 204.5,216.4 204.5,33.6"/>
 		</svg>
 	</body>
 </html>
