--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li>Java</li>
 			<li>Python (also Django and Flask)</li>
 			<li>Ruby (also Rails)</li>
+			<li>VHDL (with Quartus)</li>
 			<li>Visual Basic .NET</li>
 			<li>Basic front-end web development (HTML, CSS, Javascript)</li>
 		</ul>
