--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</ul>
 		<p>Coding experience:</p>
 		<ul>
-			<li>C (confident with C99 and C11 standards)</li>
-			<li>C++ (confident with C++98, C++11, and C++14 standards)</li>
+			<li>C (proficient with C99 and C11 standards)</li>
+			<li>C++ (proficient with C++98, C++11, and C++14 standards)</li>
 			<li>C#</li>
 			<li>Java</li>
 			<li>Python (also Django and Flask)</li>
