--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
 	<body>
 		<h1>Hi, I'm Ian.</h1>
 		<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
-		<p>You can contact me via email at <a href="mailto:inewman@ufl.edu">inewman@ufl.edu</a></p>
+		<p>You can contact me via email at <a href="mailto:ianandersnewman@gmail.com">ianandersnewman@gmail.com</a></p>
 		<p>Education:</p>
 		<ul>
 			<li>Celebration High Schoool</li>
 			<li>Windermere Preparatory School</li>
-			<li>University of Florida (current)</li>
+			<li>University of Florida</li>
+			<li>Valencia College (A.A.)</li>
+			<li>University of Central Florida (current)</li>
 		</ul>
 		<p>Coding experience:</p>
 		<ul>
-			<li>C (proficient with C99 and C11 standards)</li>
-			<li>C++ (proficient with C++98, C++11, and C++14 standards)</li>
+			<li>C</li>
+			<li>C++</li>
 			<li>C#</li>
 			<li>Java</li>
-			<li>Python (also Django and Flask)</li>
-			<li>Ruby (also Rails)</li>
-			<li>VHDL (with Quartus)</li>
-			<li>Visual Basic .NET</li>
+			<li>Python</li>
+			<li>Rust</li>
 			<li>Basic front-end web development (HTML, CSS, Javascript)</li>
 		</ul>
-		<p>Currently I am learning <i>Digital Logic</i> and <i>Data Structures and Algorithms</i>. On my own time, I am practicing full stack development and learning Mozilla's <a href="https://www.rust-lang.org/">Rust</a> language.</p>
-		<h6>This page is a placeholder. Expect a real site soon. <a href="http://github.com/inewman">GitHub</a></h6>
+		<h6>This page is a placeholder. Expect a real site soon.</h6>
 		<svg class="logo" width="250" height="250">
 			<path class="logo-parts" d="M240,10v230H10V10H240 M250,0H0v250h250V0L250,0z"/>
 			<polygon class="logo-parts" points="49.2,33.6 45.5,33.6 45.5,216.4 80.5,216.4 80.5,107.6 80.5,107.6 80.5,62.3"/>
