--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<li>Rust</li>
 			<li>Basic front-end web development (HTML, CSS, Javascript)</li>
 		</ul>
+		<p>Currently I am learning <i>Reverse Engineering</i> via <i>IDA Pro</i> and Mozilla's systems programming language, <i>Rust</i>.
 		<h6>This page is a placeholder. Expect a real site soon.</h6>
 		<svg class="logo" width="250" height="250">
 			<path class="logo-parts" d="M240,10v230H10V10H240 M250,0H0v250h250V0L250,0z"/>
