--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<h1>Hi, I'm Ian.</h1>
-		<p>I'm a Computer Engineering student with experience in Windows and mobile (iOS, Android, Windows) development.</p>
+		<p>I'm a computer engineer with experience in Windows and mobile (iOS, Android, Windows) development.</p>
 		<p>You can contact me via email at <a href="mailto:ianandersnewman@gmail.com">ianandersnewman@gmail.com</a></p>
 		<p>Education:</p>
 		<ul>
