--- a/index.html
+++ b/index.html
@@ -15,20 +15,11 @@
 		<h1>Hi, I'm Ian.</h1>
 		<p>I'm a computer engineer with experience in Windows and mobile (iOS, Android, Windows) development.</p>
 		<p>You can contact me via email at <a href="mailto:ianandersnewman@gmail.com">ianandersnewman@gmail.com</a></p>
-		<p>Education:</p>
+
+		<p>Langauges I love:</p>
 		<ul>
-			<li>Celebration High Schoool</li>
-			<li>Windermere Preparatory School</li>
-			<li>University of Florida</li>
-			<li>Valencia College (A.A.)</li>
-			<li>University of Central Florida (current)</li>
-		</ul>
-		<p>Coding experience:</p>
-		<ul>
-			<li>C</li>
 			<li>C++</li>
 			<li>C#</li>
-			<li>Java</li>
 			<li>Python</li>
 			<li>Rust</li>
 			<li>Basic front-end web development (HTML, CSS, Javascript)</li>
