--- a/sotetseg/practice.html
+++ b/sotetseg/practice.html
@@ -3,12 +3,15 @@
 	<title>Sotetseg Maze Practice</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-<div class="center-wrapper-parent">
-	<div class="canvas-wrapper">
-		<canvas id="sotetseg-maze" tabindex="1"></canvas>
+	<body>
+	<p align="center">
+		r: reset clicked tiles; m: save/load maze seed; n: generate new maze
+	</p>
+	<div class="center-wrapper-parent">
+		<div class="canvas-wrapper">
+			<canvas id="sotetseg-maze" tabindex="1"></canvas>
+		</div>
 	</div>
-</div>
-<script type="text/javascript" src="sotetseg.js"></script>
+	<script type="text/javascript" src="sotetseg.js"></script>
 </body>
 </html>
