--- a/sotetseg/practice.html
+++ b/sotetseg/practice.html
@@ -6,7 +6,7 @@
 <body>
 <div class="center-wrapper-parent">
 	<div class="canvas-wrapper">
-		<p align="center" id="info">0.0 seconds (0 ticks)</p>
+		<p align="center" id="info">0.0 seconds (0 ticks, 0 wasted)</p>
 		<canvas id="sotetseg-maze" tabindex="1"></canvas>
 		<p align="center">
 			<button onclick="reset()">Reset</button>
